--- a/users/templates/users/profile.html
+++ b/users/templates/users/profile.html
@@ -42,7 +42,7 @@
               <label for="id_first_name" class="form-label">Ім'я</label>
               <input type="text" class="form-control" value="{{form.first_name.value}}" name="first_name" id="id_first_name" placeholder="Введіть Ім'я" required>
               {% if form.first_name.errors %}
-              <div class="alert alert-danger" role="alert">s
+              <div class="alert alert-danger" role="alert">
                 {{form.first_name.errors}}
               </div>
               {% endif %}
