--- a/orders/templates/orders/create_order.html
+++ b/orders/templates/orders/create_order.html
@@ -21,7 +21,7 @@
       </div>
     </div>
   </div>
-  <form action="{% url "orders:create_order" %}" method="post" class="needs-validation" novalidate>
+  <form action="{% url 'orders:create_order' %}" method="POST" class="needs-validation" novalidate>
     {% csrf_token %}
     <div class="container-fluid">
       <div class="row">
@@ -50,25 +50,24 @@
 
                 <div class="col-md-4">
                   <label for="id_phone" class="form-label">Телефон</label>
-                  <input type="text" class="form-control" value="{% if form.phone.value %}{{ form.phone.value }}{% endif %}" name="phone" id="id_phone" placeholder="+380(000)000-00-00" required />
+                  <input type="text" class="form-control" value="{% if form.phone.value %}{{form.phone.value}}{% endif %}" name="phone" id="id_phone" placeholder="+380(000)000-00-00" required>
                   {% if form.phone.errors %}
-                    <div class="alert alert-danger" role="alert">{{ form.phone.errors }}</div>
+                  <div class="alert alert-danger" role="alert">
+                    {{form.phone.errors}}
+                  </div>
                   {% endif %}
-                  <div class="invalid-feedback">Введіть телефон !</div>
+                  <div class="invalid-feedback">
+                    Введіть телефон !
+                  </div>
                 </div>
 
                 <div class="col-md-4">
                   <label for="id_email" class="form-label">Email</label>
-                  <input type="email" class="form-control" value="{% if form.email.value %}{{form.email.value}}{% endif %}" name="email" id="id_email" placeholder="Введіть name@example.com" required>
+                  <input type="email" class="form-control" value="{% if form.email.value %}{{ form.email.value }}{% endif %}" name="email" id="id_email" placeholder="Введіть name@example.com" required />
                   {% if form.email.errors %}
-                  <div class="alert alert-danger" role="alert">
-                    {{form.email.errors}}
-                  </div>
+                    <div class="alert alert-danger" role="alert">{{ form.email.errors }}</div>
                   {% endif %}
-                  <div class="invalid-feedback">
-                    Введіть коректний email - name@example.com
-                  </div>
-
+                  <div class="invalid-feedback">Введіть коректний email - name@example.com</div>
                 </div>
               </div>
             </div>
@@ -88,30 +87,25 @@
               <div class="address row" id="deliveryAddressField">
                 <div class="col-md-3">
                   <label for="city" class="form-label">Місто</label>
-                  <input type="text" class="form-control" value="{% if form.city.value %}{{ form.city.value }}{% endif %}" name="city" id="city" placeholder="село, cмт і тд" required />
+                  <input type="text" class="form-control" value="{% if form.city.value %}{{ form.city.value }}{% endif %}" name="city" id="city" placeholder="село, cмт і тд" required/>
                   <div class="invalid-feedback">Введіть місто</div>
                 </div>
 
                 <div class="col-md-5">
                   <label for="street" class="form-label">Вулиця</label>
-                  <input type="text" class="form-control" value="{% if form.street.value %}{{ form.street.value }}{% endif %}" name="street" id="street" placeholder="вул." required />
+                  <input type="text" class="form-control" value="{% if form.street.value %}{{ form.street.value }}{% endif %}" name="street" id="street" placeholder="вул."  required/>
                   <div class="invalid-feedback">Введіть назву вулиці</div>
                 </div>
 
                 <div class="col-md-2">
                   <label for="building" class="form-label">Будинок</label>
-                  <input type="text" class="form-control" value="{% if form.building.value %}{{ form.building.value }}{% endif %}" name="building" id="building" placeholder="буд." required />
-                  {% if form.building.errors %}
-                  <div class="alert alert-danger" role="alert">
-                    {{form.building.errors}}
-                  </div>
-                  {% endif %}
+                  <input type="text" class="form-control" value="{% if form.building.value %}{{ form.building.value }}{% endif %}" name="building" id="building" placeholder="буд." required/>
                   <div class="invalid-feedback">Введіть номер будинку</div>
                 </div>
 
                 <div class="col-md-2">
                   <label for="apartment" class="form-label">Квартира</label>
-                  <input type="text" class="form-control" id="apartment" placeholder="кв."/>
+                  <input type="text" class="form-control" id="apartment" placeholder="кв." required />
                 </div>
               </div>
               <div class="radio-check row">
@@ -123,8 +117,8 @@
                   <input class="form-check-input" type="radio" name="payment_on_get" id="id_payment_on_get" value="1" />
                   <label class="form-check-label" for="id_payment_on_get">Післяплата</label>
                   {% if form.payment_on_get.errors %}
-                  <div class="alert alert-danger alert-dismissible fade show">{{form.payment_on_get.errors}}</div>
-              {% endif %}
+                    <div class="alert alert-danger alert-dismissible fade show">{{ form.payment_on_get.errors }}</div>
+                  {% endif %}
                 </div>
               </div>
 
@@ -132,7 +126,6 @@
                 <label for="exampleFormControlTextarea1" class="form-label">Коментар до замовлення :</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
               </div>
-              
             </div>
           </div>
         </div>
@@ -150,7 +143,7 @@
             <div class="total">
               Оплата<span>{{ carts.total_price }} грн</span>
             </div>
-              <button type="submit" class="btn">Підтвердити замовлення</button>
+            <button type="submit" class="btn">Підтвердити замовлення</button>
           </div>
 
           <div class="section-title-cart-order d-flex justify-content-between align-items-center">
@@ -168,7 +161,7 @@
                 <div class="prdouct-info col-8 mt-1">
                   <ul>
                     <li>
-                      Назва товару: <span class="product-excerpt">{{ cart.product.name }}</span>
+                      Назва товару: <span class="product-order-name">{{ cart.product.name }}</span>
                     </li>
                     <li>
                       Матеріал: <span>{{ cart.product.material }}</span>
