--- a/templates/base.html
+++ b/templates/base.html
@@ -142,7 +142,7 @@
               <div class="modal-content">
                 <div class="modal-header">
                   <h1 class="modal-title" id="exampleModalToggleLabel">Авторизація</h1>
-                  <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                  <button type="button" class="btn btn-close btn-lg" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                   <form action="{% url "user:login"%}" method="POST" class="needs-validation" novalidate>
