--- a/products/templates/products/catalog.html
+++ b/products/templates/products/catalog.html
@@ -144,7 +144,7 @@
         </div>
       <div class="row">
         <div class="col-12 d-flex align-items-center">
-          <form id='sortForm' action="{% url 'catalog:index' slug_url %}" method="GET">
+          <form id="sortForm" action="{% url 'catalog:index' slug_url %}" method="GET">
           <select id="sortOption" name="sort_option" class="form-select m-3">
             <option value="">Сортувати в категорії :</option>
             <option value="1{% if 'color' in request.GET %}&amp;color={{ request.GET.color|urlencode }}{% endif %}">Від дешевих до дорогих</option>
@@ -156,7 +156,7 @@
         </div>
       </div>
       <div class="row">
-        {% for product in products %}
+        {% for product in products%}
         <div class="col-xxl-3 col-xl-4 col-md-6 mb-3">
           <div class="product-card">
             <div class="product-card-offer">
@@ -186,7 +186,7 @@
                 {% autoescape off %}
                     {% if product.bodyline %}{{product.bodyline}}
                     {% else %}{{product.description}}
-                    {% endif %}</a>
+                    {% endif %}
                 {% endautoescape %}
                 
               </p>
